fixed Register Here button to don't break the responsiveness.

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3041,7 +3041,7 @@ fieldset[disabled] .btn {
   color: #333;
   background-color: #fff;
   border-color: #ccc;
-  font-size: 54px;
+  font-size: 44px;
 }
 .btn-default:hover,
 .btn-default:focus,
