--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ hr {
 	border-width: 5px;
 	padding: 10px 20px;
 	margin: 0;
-	font-size: 54px;
+	font-size: 44px;
 	font-weight: 700;
 	border-radius: 0;
 	box-shadow: 2px 2px 5px #6e8879;
